# Aganitha_Task

./: README.md  alzheimers.csv  bash.exe.stackdump  cancer.csv  covid.csv  crispr.csv  pyproject.toml
cli/: __init__.py  main.py
papers_fetcher/: __init__.py  export.py  fetch.py  file_naming.py  filter.py
tests/: __init__.py  test_cli.py  test_export.py  test_fetch.py  test_filter.py
